Port resource pack system to 1.21.11: update YdmCardResourcePack and YdmResourcePackFinder to modern API
Co-authored-by: MacMoment <230276280+MacMoment@users.noreply.github.com>